--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -863,3 +863,7 @@ text-shadow: 0 6px 5px rgba(0,0,0,1);
     background-position: center;   /* Centra la imagen */
     background-repeat: no-repeat;  /* Evita que se repita */
 }
+
+.bgo-institucional4 {
+    background-color: #BC955B80;
+}
