--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -104,12 +104,13 @@ a.nav-link {
 .dropdown-item:hover {
     color: #fff !important;
     text-decoration: none;
-    background-color: var(--colorInstitucional4) !important;
+    background-color: var(--colorInstitucional2) !important;
 }
 
 .nav-link.show {
     background: var(--colorInstitucional2);
     color: white !important;
+    transition: all 0.5s ease;
 }
 
 a.activaMenu {
@@ -120,8 +121,8 @@ a.activaMenu {
 }
 
 a.nav-link:hover {
-    color: white !important;
-    background-color: var(--colorInstitucional2) !important;
+    color: rgb(0, 0, 0) !important;
+    background-color: var(--colorInstitucional3) !important;
 }
 
 /**- Estilos para MenÃº -**/
@@ -710,9 +711,9 @@ a.activaMenu{
         border-radius: 0;
     }
     .dropdown-menu.show {
-        background: var(--colorInstitucional1);
+        background: var(--colorInstitucional3);
         position: fixed;
-        top: 67px;
+        top: 64px;
         flex-direction: column !important;
         left: 200px;
         overflow-y: auto;
@@ -720,6 +721,7 @@ a.activaMenu{
         overflow-x: hidden;
         margin-top: 0px;
         border-radius: 0;
+        transition: all 5s ease;
     }
     a.nav-link {
         color: var(--colorInstitucional2);
@@ -730,10 +732,11 @@ a.activaMenu{
         border-bottom: 0px !important;
     }
     .dropdown-item {
-        color: var(--colorInstitucional4);
+        color: var(--colorInstitucional2);
         white-space: unset;
         padding-top: 2px !important;
         padding-bottom: 1px !important;
+        transition: all 0.5s ease;
     }
 }
 .transicion {
