--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -169,6 +169,14 @@ h6 {
     background-blend-mode: initial !important;
 }
 
+.bg-institucionalbarra {
+    background-color: var(--colorInstitucional1);
+    background-image: url(../../public/img/Frameverde.svg) !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-blend-mode: initial !important;
+}
+
 .bg-institucional1 {
     background-color: var(--colorInstitucional1) !important;
 }
