--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -984,3 +984,8 @@ text-shadow: 0 6px 5px rgba(0,0,0,1);
     border-radius: 8px;
     padding: 5px 9px;
 }
+
+.bg-movil{
+    background-color: #ebe5e5;
+    border-radius: 10px;
+}
